--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,5 +1,12 @@
+FROM jguyomard/hugo-builder as build
+
+COPY . /src/
+
+RUN hugo
+
+
 FROM httpd:alpine
 
 EXPOSE 80
 
-COPY ./public/ /usr/local/apache2/htdocs/
+COPY --source=build /src/public/ /usr/local/apache2/htdocs/
